add feature to change hotkey to open skilltree ui

--- a/SkillTree IL2cpp.csproj
+++ b/SkillTree IL2cpp.csproj
@@ -482,6 +482,7 @@
 		<Compile Include="SkillPatchStats\SkillPatchStats.cs" />
 		<Compile Include="SkillsJson\SkillAttribute.cs" />
 		<Compile Include="SkillsJson\SkillSlot.cs" />
+		<Compile Include="SkillsJson\SkillTreeConfig.cs" />
 		<Compile Include="SkillsJson\SkillTreeSaveManager.cs" />
 		<Compile Include="UI\SkillTreeUI.cs" />
 	</ItemGroup>
