Add Special Category (Active Skills and Better Employees), better balance

--- a/SkillTree IL2cpp.csproj
+++ b/SkillTree IL2cpp.csproj
@@ -484,6 +484,9 @@
 		<Compile Include="SkillsJson\SkillSlot.cs" />
 		<Compile Include="SkillsJson\SkillTreeConfig.cs" />
 		<Compile Include="SkillsJson\SkillTreeSaveManager.cs" />
+		<Compile Include="SkillSpecial\SkillActive.cs" />
+		<Compile Include="SkillSpecial\SkillEmployee\SkillPatchBotanist.cs" />
+		<Compile Include="SkillSpecial\SkillEmployee\SkillPatchEmployee.cs" />
 		<Compile Include="UI\SkillTreeUI.cs" />
 	</ItemGroup>
 
